[package]
name = "chat-templates"
version = "0.3.0"
edition = "2021"
authors = ["Hung-Han Chen <chenhungh@gmail.com>"]
description = "Simple chat templates parser/generator for prompting LLM"
license-file = "LICENSE"
repository = "https://github.com/chenhunghan/chat-templates"
readme = "README.md"
keywords = ["llm", "chatml", "chat-templates"]

[dependencies]
minijinja = "1.0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.58"
